# nust

./: Cargo.toml  README.md  agents.md  api_contracts.md  dependency_graph.md  design.md  engineering_roadmap.md  features.md  implementation_plan.md  memory.md  product_requirements_document.md  repo_structure.md  rust_workspace_setup.md  steering.md  system_architecture.md  system_modules.md
.github/workflows/: codeql.yml
configs/: browser_settings.toml  build_config.toml  feature_flags.toml
crates/ai_platform/: Cargo.toml
crates/ai_platform/src/: automation_agent.rs  form_autofill_agent.rs  lib.rs  page_analyzer.rs  research_agent.rs  (+1 more)
crates/automation_platform/: Cargo.toml
crates/browser_shell/: Cargo.toml
crates/browser_shell/src/: account_sync.rs  address_bar.rs  automation_registry.rs  bookmark_manager.rs  bookmark_tab.rs  capability_matrix.rs  design_system.rs  download_manager.rs  extension_library.rs  history_manager.rs  home_page.rs  lib.rs  main.rs  navigation_controller.rs  new_tab_page.rs  pipeline.rs  search_engines.rs  session_manager.rs  settings_system.rs  skin_registry.rs  tab_intelligence.rs  tab_manager.rs  tab_process_registry.rs  task_manager.rs  ui_skin.rs  upload_manager.rs  window_manager.rs  workspace_manager.rs
crates/core_engine/: Cargo.toml
crates/data_extraction_engine/: Cargo.toml
crates/devtools_platform/: Cargo.toml
crates/distributed_browser_cluster/: Cargo.toml
crates/dom_engine/: Cargo.toml
crates/event_system/: Cargo.toml
crates/extension_system/: Cargo.toml
crates/gpu_compositor/: Cargo.toml
crates/html_parser/: Cargo.toml
crates/html_tokenizer/: Cargo.toml
crates/javascript_runtime/: Cargo.toml
crates/layout_engine/: Cargo.toml
crates/networking_stack/: Cargo.toml
crates/observability_system/: Cargo.toml
crates/paint_engine/: Cargo.toml
crates/painting_engine/: Cargo.toml
crates/render_tree/: Cargo.toml
crates/rendering_engine/: Cargo.toml
crates/rendering_engine/src/: css_parser.rs  css_tokenizer.rs  cssom.rs  dom_tree_builder.rs  html_parser.rs  html_tokenizer.rs  lib.rs  render_tree_builder.rs  selector_matcher.rs  style_engine.rs
crates/resource_loader/: Cargo.toml
crates/security_layer/: Cargo.toml
crates/storage_system/: Cargo.toml
docs/: architecture_expansion_blueprint.md  engine_gap_discovery_report.md  lightweight_feature_strategy.md  merge_plan.md  phase_execution_log.md  snapshot.md
scripts/: install_productivity_skills.sh  run_dev.sh
(+120 files in other folders)
