[package]
name = "browser_shell"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
core_engine = { path = "../core_engine" }
networking_stack = { path = "../networking_stack" }
resource_loader = { path = "../resource_loader" }
html_tokenizer = { path = "../html_tokenizer" }
html_parser = { path = "../html_parser" }
dom_engine = { path = "../dom_engine" }
render_tree = { path = "../render_tree" }
layout_engine = { path = "../layout_engine" }
paint_engine = { path = "../paint_engine" }
rendering_engine = { path = "../rendering_engine" }
painting_engine = { path = "../painting_engine" }

[[bin]]
name = "browser_shell"
path = "src/main.rs"
